# soundmind1

./: README.md  pyproject.toml
schemas/: diarization.schema.json  events.schema.json  status.schema.json
soundmind/: __init__.py  __main__.py  audio.py  cli.py  context.py  contracts.py  jobs.py  pipeline.py  status_init.py  utils.py
soundmind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
soundmind/stages/: __init__.py  base.py  diarization.py  events.py  ingest.py  rollup.py  separation.py  sqi.py
tests/: conftest.py  test_artifacts.py  test_contracts.py  test_determinism.py  test_diarization.py  test_events_commit9.py  test_schema_validation.py  test_speaker_audio.py
tests/cli/: __init__.py  test_run.py
tools/: validate_schema.py
