[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soundmind"
version = "1.0.0.dev0"
description = "SoundMind v1 - Forensic Audio Processing Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
include = ["soundmind*"]
